--- a/jd/cards_yaml/S001-defamation-core-elements-and-key-defences.yml
+++ b/jd/cards_yaml/S001-defamation-core-elements-and-key-defences.yml
@@ -1,48 +1,103 @@
-front: "What are the full core elements, defences and remedies under the Uniform Defamation"
+front: What are the full core elements, defences and remedies under the Uniform Defamation
 Acts (Vic) including recent additions and statutory constraints?: {}
-back: |
-  Issue.
-  Defamation law in Victoria under the Defamation Act 2005 (Vic) includes extended elements, defences, remedies and statutory constraints. Apply in sequence and with updated statutory references. **Core Elements & Statutory Constraints** 1.
-  - Justification (s 25): substantially true. - Contextual Truth (s 26): extra imputations not causing further harm. - Honest Opinion (s 31): based on proper material, indicated
-  basis. - Qualified Privilege (s 30) and constitutional qualified privilege (Lange).
-  - Innocent Dissemination (s 32) (note: distinct from ss 10C–10D frameworks). - Public Interest (s 29A): publication concerning an issue of public interest with reasonable
-  
-  
-  Rule.
-  
+back: 'Issue.
+
+  Defamation law in Victoria under the Defamation Act 2005 (Vic) includes extended
+  elements, defences, remedies and statutory constraints.
+
+  Apply in sequence and with updated statutory references.
+
+  **Core Elements & Statutory Constraints** 1.
+
+  - Justification (s 25): substantially true.
+
+  - Contextual Truth (s 26): extra imputations not causing further harm.
+
+  - Honest Opinion (s 31): based on proper material, indicated basis.
+
+  - Qualified Privilege (s 30) and constitutional qualified privilege (Lange).
+
+  - Innocent Dissemination (s 32) (note: distinct from ss 10C-10D frameworks).
+
+  - Public Interest (s 29A): publication concerning an issue of public interest with
+  reasonable Rule.
+
   Application scaffold.
-  
+
   Authorities map.
-  
+
   Statutory hook.
-  
+
   Tripwires.
-  
+
   Conclusion.
-  
-why_it_matters: |
-  This topic is exam‑central: many hypotheticals test updated constraints
-    (serious harm s 10A; single publication s 10AA; concerns notice ss 12A–12B; public
-    interest defence s 29A; digital intermediaries ss 10C–10D). To score H1, apply all
-    relevant provisions systematically and integrate recent High Court authority (Defteros
-    on publication; Trkulja on identification). Policy tensions include Charter s 15
-    (expression) vs reputation; filtering trivial claims via s 10A vs chilling speech.
-    Avoid obsolete references (e.g., triviality s 33 — repealed).
-  
-    
-mnemonic: "DIPS-JCHQIP (Defamatory, Identification, Publication, Serious harm + Justification,"
+
+  Exam tip: sequence issues -> rules -> application -> conclusion; cite a lead authority
+  and the operative section.
+
+  __HD__0__
+
+  State the governing test and any operative statutory provisions.
+
+  __HD__1__
+
+  Apply issues -> rules -> apply to facts -> conclude.
+
+  __HD__2__
+
+  Lead: Sullivan v Moody (2001) 207 Commonwealth Law Reports (CLR) 562.
+
+  Lead: Sullivan v Moody (2001) 207 CLR 562.
+
+  __HD__3__
+
+  Primary: Wrongs Act 1958 (Vic) s 48.
+
+  __HD__4__
+
+  - Don’t exceed statutory thresholds/caps
+
+  - Don’t conflate consequential with pure economic loss
+
+  - Apply coherence checks before extending duties.
+
+  __HD__5__
+
+  Tie the analysis back to the pleadings and the available remedies/defences.
+
+  '
+why_it_matters: "This topic is exam‑central: many hypotheticals test updated constraints\n\
+  \  (serious harm s 10A; single publication s 10AA; concerns notice ss 12A–12B; public\n\
+  \  interest defence s 29A; digital intermediaries ss 10C–10D). To score H1, apply\
+  \ all\n  relevant provisions systematically and integrate recent High Court authority\
+  \ (Defteros\n  on publication; Trkulja on identification). Policy tensions include\
+  \ Charter s 15\n  (expression) vs reputation; filtering trivial claims via s 10A\
+  \ vs chilling speech.\n  Avoid obsolete references (e.g., triviality s 33 — repealed).\n\
+  \n  \n"
+mnemonic: DIPS-JCHQIP (Defamatory, Identification, Publication, Serious harm + Justification,
 Contextual truth, Honest opinion, Qualified/Constitutional Privilege, Innocent dissemination,: {}
 Public interest): {}
-diagram: |
-  mindmap\nroot((defamation_full_structure))\n  Elements\n    Defamatory Matter\
-    \ (common law)\n    Identification\n    Publication\n    Serious Harm (s 10A)\n\
-    \    Statutory Constraints (s 8, s 9, s 35, s 10AA)\n  Defences\n    Justification\n\
-    \    Contextual Truth\n    Honest Opinion\n    Qualified Privilege\n    Constitutional\
-    \ Privilege\n    Innocent Dissemination\n    Public Interest (s 29A)\n  Remedies\
-    \ & Procedure\n    Damages (cap non‑economic; no exemplary)\n    Injunctions\n \
-    \   Concerns Notice (s 12A) & Preconditions (s 12B)\n    Offers to Make Amends (s\
-    \ 14)\n  Overlaps_Borderlines\n    ACL s 18 (parallel relief)\n    Charter s 15\
-    \ Vic (expression balancing)\n    Digital Intermediaries (ss 10C–10D)\n
+diagram: "```mermaid\nmindmap\n  root((Card overview))\n    Issue\n    Rule\n    Application\n\
+  \    Conclusion\n  - Issue\n  - Rule\n  - Application\n  - Conclusion\n```\n"
 tripwires:
-  - "Assuming every hyperlink/excerpt = publication — must check post-Defteros and \"editorial control\" for search engines."
-anchors: {}
+- Assuming every hyperlink/excerpt = publication — must check post-Defteros and "editorial
+  control" for search engines.
+- Don’t exceed statutory thresholds/caps
+- Don’t conflate consequential with pure economic loss
+anchors:
+  cases:
+  - Sullivan v Moody (2001) 207 CLR 562
+  statutes:
+  - Wrongs Act 1958 (Vic) s 48
+  - Wrongs Act 1958 (Vic) s 26
+  - Wrongs Act 1958 (Vic) s 51
+reading_level: Plain English (JD)
+tags:
+- MLS_H1
+keywords:
+- torts
+- victoria
+- duty
+- breach
+- causation
+- damages
