--- a/jd/cards_yaml/0017-vicarious-liability-master.yml
+++ b/jd/cards_yaml/0017-vicarious-liability-master.yml
@@ -1,75 +1,137 @@
-front: "In a vicarious liability problem, how do you determine whether an employer"
+front: In a vicarious liability problem, how do you determine whether an employer
 is liable for a worker's tort, focusing on employee vs contractor classification: {}
 and 'course of employment'?: {}
-back: |
-  Issue.
-  When can a defendant (typically an employer) be held liable for torts committed by another?
-  
+back: 'Issue.
+
+  When can a defendant (typically an employer) be held liable for torts committed
+  by another?
+
   Rule.
-  Vicarious liability applies where (1) the tortfeasor is an employee (not an independent contractor) and (2) the tort occurred in the course of employment. Classification uses a multifactorial test: control, integration, delegation, tools, risk allocation, remuneration (Stevens v Brodribb (1986) 160 CLR 16, 29–30).
-  
+
+  Vicarious liability applies where (1) the tortfeasor is an employee (not an independent
+  contractor) and (2) the tort occurred in the course of employment.
+
+  Classification uses a multifactorial test: control, integration, delegation, tools,
+  risk allocation, remuneration (Stevens v Brodribb (1986) 160 Commonwealth Law Reports
+  (Commonwealth Law Reports (CLR)) 16, 29-30).
+
   Application scaffold.
-  1) Classify worker: apply multifactorial indicators; assess business integration and economic dependence. 2) Connect the tort to employment: proximity to duties, benefit to employer, enterprise risk; exclude frolics. 3) For intentional torts (eg, battery), test unauthorised mode; for institutional abuse, test close connection.
-  
+
+  1) Classify worker: apply multifactorial indicators.
+
+  assess business integration and economic dependence.
+
+  2) Connect the tort to employment: proximity to duties, benefit to employer, enterprise
+  risk.
+
+  exclude frolics.
+
+  3) For intentional torts (eg, battery), test unauthorised mode.
+
+  for institutional abuse, test close connection.
+
   Authorities map.
-  
+
   Statutory hook.
-  Wrongs Act 1958 (Vic) Pt VBA (damages caps) if personal injury; otherwise no core statutory source for liability.
-  
+
+  Wrongs Act 1958 (Vic) Pt Victorian statutory damages part (Pt Victorian Bar Association
+  (VBA)) (damages caps) if personal injury.
+
+  otherwise no core statutory source for liability.
+
   Tripwires.
-  Treating any employee tort as automatically “in course”. Misclassifying contractors by single‑factor focus. Ignoring Deatons for battery. Confusing vicarious liability with non‑delegable duty. Forgetting Pt VBA caps in personal injury.
-  
+
+  Treating any employee tort as automatically “in course”.
+
+  Misclassifying contractors by single‑factor focus.
+
+  Ignoring Deatons for battery.
+
+  Confusing vicarious liability with non‑delegable duty.
+
+  Forgetting Pt VBA caps in personal injury.
+
   Conclusion.
-  
-why_it_matters: |
-  Vicarious liability is a recurrent loss‑allocation device in exams.
-    High‑band answers cleanly classify worker status, connect the tort to authorised
-    work, and avoid conflating vicarious liability with non‑delegable duty. Adding Pt
-    VBA caps in personal injury shows statutory literacy. Policy (enterprise risk, deterrence,
-    compensation) elevates analysis.
-  
-    
-mnemonic: "CLASS → Control, Labour integration, Allocation of risk, Substitution limits,"
+
+  __HD__0__
+
+  State the governing test and any operative statutory provisions.
+
+  __HD__1__
+
+  Apply issues -> rules -> apply to facts -> conclude.
+
+  __HD__2__
+
+  Lead: [insert principal case].
+
+  Lead: [insert principal case].
+
+  __HD__3__
+
+  Primary: Wrongs Act 1958 (Vic) s 48.
+
+  __HD__4__
+
+  - Don’t exceed statutory thresholds/caps
+
+  - Don’t conflate consequential with pure economic loss
+
+  - Apply coherence checks before extending duties.
+
+  __HD__5__
+
+  Tie the analysis back to the pleadings and the available remedies/defences.
+
+  '
+why_it_matters: "Vicarious liability is a recurrent loss‑allocation device in exams.\n\
+  \  High‑band answers cleanly classify worker status, connect the tort to authorised\n\
+  \  work, and avoid conflating vicarious liability with non‑delegable duty. Adding\
+  \ Pt\n  VBA caps in personal injury shows statutory literacy. Policy (enterprise\
+  \ risk, deterrence,\n  compensation) elevates analysis.\n\n  \n"
+mnemonic: CLASS → Control, Labour integration, Allocation of risk, Substitution limits,
 Salary/Remuneration: {}
-diagram: |
-  ```mermaid\nmindmap\n  root((Vicarious Liability))\n    Issue\n    Rule\n\
-    \    Application\n    Tripwires\n    Overlaps\n```\n
+diagram: "```mermaid\nmindmap\n  root((Card overview))\n    Issue\n    Rule\n    Application\n\
+  \    Conclusion\n  - Issue\n  - Rule\n  - Application\n  - Conclusion\n```\n"
 tripwires:
-  - "Confusing independent contractor with employee due to single-factor focus"
-  - "Assuming any wrongful act by employee is always 'in course'"
-  - "Overlooking special battery rule in Deatons v Flew"
-  - "Ignoring Wrongs Act statutory caps in damages"
-  - "Neglecting enterprise risk rationale"
-  - "Missing modern institutional liability extensions"
+- Confusing independent contractor with employee due to single-factor focus
+- Assuming any wrongful act by employee is always 'in course'
+- Overlooking special battery rule in Deatons v Flew
+- Ignoring Wrongs Act statutory caps in damages
+- Neglecting enterprise risk rationale
+- Missing modern institutional liability extensions
 anchors:
   cases:
-    - "TODO anchor case 1"
-  statutes: []
+  - TODO anchor case 1
+  statutes:
+  - Wrongs Act 1958 (Vic) s 48
+  - Wrongs Act 1958 (Vic) s 26
+  - Wrongs Act 1958 (Vic) s 51
   notes: []
 keywords:
-  - "vicarious-liability"
-  - "employee"
-  - "independent-contractor"
-  - "course-of-employment"
-  - "frolic"
-  - "enterprise-risk"
-  - "loss-allocation"
-  - "control-test"
-  - "integration-test"
-  - "multifactorial-test"
-reading_level: "JD-ready"
+- vicarious-liability
+- employee
+- independent-contractor
+- course-of-employment
+- frolic
+- enterprise-risk
+- loss-allocation
+- control-test
+- integration-test
+- multifactorial-test
+reading_level: JD-ready
 tags:
-  - "laws50025 - torts"
-  - "vicarious_liability"
-  - "exam_fundamentals"
-  - "mls_h1"
-  - "MLS_H1"
+- laws50025 - torts
+- vicarious_liability
+- exam_fundamentals
+- mls_h1
+- MLS_H1
 _lint_notes:
-  - "canonical_headers_added"
-  - "authorities_map_and_statutory_hook_added"
-  - "diagram_compacted_<=12_nodes"
-  - "keywords_hyphenated"
+- canonical_headers_added
+- authorities_map_and_statutory_hook_added
+- diagram_compacted_<=12_nodes
+- keywords_hyphenated
 sources: []
-created: "2025-09-25T06:52:28.469539Z"
-updated: "2025-09-25T07:14:44.214222Z"
-template: "concept"
+created: '2025-09-25T06:52:28.469539Z'
+updated: '2025-09-25T07:14:44.214222Z'
+template: concept
