--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-PyYAML==6.0
-types-PyYAML
-python-docx
+requests>=2.32
+PyYAML>=6.0
+types-PyYAML>=6.0
+beautifulsoup4>=4.12
+PyMuPDF>=1.24
+pdfminer.six>=20231228
+python-docx>=1.1
+pytest>=8.3
+openai>=1.30
+fastapi>=0.111
+uvicorn[standard]>=0.29
+httpx>=0.27
